--- a/index.html
+++ b/index.html
@@ -102,27 +102,20 @@
     </section>
 
     <section id="projects">
-      <h2>Featured Projects</h2>
-      <div class="grid">
-        <article class="card panel">
-          <h3>Home Inventory App (PWA)</h3>
-          <p>Full‑stack inventory manager with JWT auth, multi‑inventory scoping, and a responsive React UI.</p>
-          <div class="meta">FastAPI · PostgreSQL · SQLAlchemy · React + TS · Tailwind</div>
-          <div class="links">
-            <a href="https://sloughmiller-inventoryproject.netlify.app/login" target="_blank" rel="noopener">Live</a>
-            <a href="https://github.com/sloughmiller/InventoryProject" target="_blank" rel="noopener">Repo</a>
-          </div>
-        </article>
-        <article class="card panel">
-          <h3>Resume / Portfolio Site</h3>
-          <p>Lightweight, self‑hosted page on GitHub Pages. Clean HTML/CSS, fast load, minimal dependencies.</p>
-          <div class="meta">GitHub Pages · HTML · Accessibility</div>
-          <div class="links">
-            <a href="resume.pdf" target="_blank" rel="noopener">PDF Resume</a>
-          </div>
-        </article>
+  <h2>Featured Projects</h2>
+  <div class="grid">
+    <article class="card panel">
+      <h3>Home Inventory App (PWA)</h3>
+      <p>Full-stack inventory manager with JWT auth, multi-inventory scoping, and a responsive React UI.</p>
+      <div class="meta">FastAPI · PostgreSQL · SQLAlchemy · React + TS · Tailwind</div>
+      <div class="links">
+        <a href="https://sloughmiller-inventoryproject.netlify.app/login" target="_blank" rel="noopener">Live</a>
+        <a href="https://github.com/sloughmiller/InventoryProject" target="_blank" rel="noopener">Repo</a>
       </div>
-    </section>
+    </article>
+  </div>
+</section>
+
 
     <section id="about" class="panel">
       <h2>About</h2>
