--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="meta">FastAPI · PostgreSQL · SQLAlchemy · React + TS · Tailwind</div>
       <div class="links">
         <a href="https://sloughmiller-inventoryproject.netlify.app/login" target="_blank" rel="noopener">Live</a>
-        <a href="https://github.com/sloughmiller/InventoryProject" target="_blank" rel="noopener">Repo</a>
+        <a href="https://github.com/sloughmiller/InventoryProjectApp-Showcase.git" target="_blank" rel="noopener">Repo</a>
       </div>
     </article>
   </div>
