updating resume link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <p>Engineer with a decade of automation experience, now focused on pragmatic, scalable backends and strong relational data models. FastAPI · PostgreSQL · SQLAlchemy · React (TS) · Auth.</p>
       <div class="cta">
         <!-- Put resume.pdf at repo root -->
-        <a class="btn" href="resume.pdf" target="_blank" rel="noopener">📄 View / Download Resume</a>
+        <a class="btn" href="https://sloughmiller.github.io/Resume.pdf" target="_blank" rel="noopener">📄 View Resume</a>
         <a class="btn btn-ghost" href="https://sloughmiller-inventoryproject.netlify.app/login" target="_blank" rel="noopener">Live App</a>
         <a class="btn btn-ghost" href="https://github.com/sloughmiller/InventoryProjectApp-Showcase" target="_blank" rel="noopener">Source</a>
       </div>
