--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="cta">
         <!-- Put resume.pdf at repo root -->
         <a class="btn" href="https://sloughmiller.github.io/Resume.pdf" target="_blank" rel="noopener">📄 View Resume</a>
-        <a class="btn btn-ghost" href="https://sloughmiller-inventoryproject.netlify.app/login" target="_blank" rel="noopener">Live App</a>
+        <a class="btn btn-ghost" href="https://sloughmiller-inventoryproject.netlify.app/" target="_blank" rel="noopener">Live App</a>
         <a class="btn btn-ghost" href="https://github.com/sloughmiller/InventoryProjectApp-Showcase" target="_blank" rel="noopener">Source</a>
       </div>
     </section>
@@ -109,7 +109,7 @@
       <p>Full-stack inventory manager with JWT auth, multi-inventory scoping, and a responsive React UI.</p>
       <div class="meta">FastAPI · PostgreSQL · SQLAlchemy · React + TS · Tailwind</div>
       <div class="links">
-        <a href="https://sloughmiller-inventoryproject.netlify.app/login" target="_blank" rel="noopener">Live</a>
+        <a href="https://sloughmiller-inventoryproject.netlify.app/" target="_blank" rel="noopener">Live</a>
         <a href="https://github.com/sloughmiller/InventoryProjectApp-Showcase" target="_blank" rel="noopener">Repo</a>
       </div>
     </article>
